--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "workshop-sample",
   "version": "1.0.0",
+  "description": "IaC Workshop with Tekton/Shipwright builds",
+  "main": "index.ts",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js"
+  },
   "dependencies": {
-    "@pulumi/pulumi": "^3.88.2",
-    "@pulumi/kubernetes": "^4.10.0",
-    "@pulumi/docker": "^3.4.0"
+    "@pulumi/pulumi": "^3.0.0",
+    "@pulumi/kubernetes": "^4.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@types/node": "^20.0.0"
   }
 }
