--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@ node_modules
 bin
 .DS_Store
 app/node_modules
+
+# Load testing artifacts
+load-test-logs/
+temp-workspaces/
+
+# Utility/development scripts
+utility/
+
+# Pulumi state files
+Pulumi.*.yaml
+!Pulumi.yaml
